--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "wik-dps-tp01",
   "version": "1.0.0",
-  "description": "",
+  "description": "Le but du TP était de développer une API.\r Notre API devait :\r * Retourner au format `JSON` les headers de la requête quand il y une requête `HTTP GET` sur `/ping`\r * Ecouter sur un port configurable via la variable d'environnement : `PING_LISTEN_PORT`\r * Renvoyer une réponse vide avec code 404 si la requête quoi que ça soit d'autre que `GET /ping`\r * Renvoyer une réponse vide code 500 si l'erreur était inconnue",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
